tutorial-ui/kubernetes/02_service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tutorial-ui-service

spec:
  selector:
    app: tutorial-ui

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
