tutorial-ui/kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tutorial-frontend-service

spec:
  selector:
    app: tutorial-frontend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
