tutorial-ui/kubernetes/03_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tutorial-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: tutorial.local
      http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tutorial-service
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: tutorial-ui-service
                port:
                  number: 80
